feat: update the document

--- a/Machine-Learning/Machine Learning Final Project.ipynb
+++ b/Machine-Learning/Machine Learning Final Project.ipynb
@@ -13,9 +13,9 @@
    "source": [
     "Enron scandal is one of the most famous scandals in the world. Because of the fraud, Enron went bankrupt in 2002. I heard and learnt a lot about it since day 1 in business school. During that time, all I learnt was about how did they cheat on their financial statement, but why Arthur Andersen, the auditor, did not find out. \n",
     "\n",
-    "I was very excited when I knew there are tens of thousands of emails and detailed financial data for top executives, which I have never heard or thought about before. By playing around with these datasets, I can becaome a detective, my dreamy job when I was a kid after watching a lot Case Closed, to identify person of interest. \n",
+    "I was very excited when I knew there are tens of thousands of emails and detailed financial data for top executives, which I have never heard or thought about before. By playing around with these datasets, I can become a detective, my dreamy job when I was a kid after watching a lot Case Closed, to identify person of interest. \n",
     "\n",
-    "I will apply what I my machine learning knowledge in this project to build up algorithms to find out who were involved in the scandle, meaning they were indicted, reached a settlement or plea deal with the government, or testified in exchange for prosecution immunity."
+    "In this project, I will apply what I my machine learning knowledge in this project to build up algorithms to find out who were involved in the scandle, meaning they were indicted, reached a settlement or plea deal with the government, or testified in exchange for prosecution immunity."
    ]
   },
   {
