docs: AddDataset/Questions section

--- a/Machine-Learning/Machine Learning Final Project.ipynb
+++ b/Machine-Learning/Machine Learning Final Project.ipynb
@@ -19,6 +19,61 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataset/Questions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The dataset I am going to use includes the financial and email information of people related to the scandle. The information will be read to a dictionary. The dictionary key is the person's name, and the value is another dictionary, which contains the names of all the features and their values for that person. The features in the data fall into three major types, namely financial features, email features and POI labels.\n",
+    "\n",
+    "* financial features (all units are in US dollars)\n",
+    "    * 'salary'\n",
+    "    * 'deferral_payments'\n",
+    "    * 'total_payments'\n",
+    "    * 'loan_advances'\n",
+    "    * 'bonus'\n",
+    "    * 'restricted_stock_deferred'\n",
+    "    * 'deferred_income'\n",
+    "    * 'total_stock_value'\n",
+    "    * 'expenses'\n",
+    "    * 'exercised_stock_options'\n",
+    "    * 'other'\n",
+    "    * 'long_term_incentive'\n",
+    "    * 'restricted_stock'\n",
+    "    * 'director_fees'\n",
+    "\n",
+    "\n",
+    "* email features (units are generally number of emails messages; notable exception is ‘email_address’, which is a text string)\n",
+    "    * 'to_messages'\n",
+    "    * 'email_address'\n",
+    "    * 'from_poi_to_this_person'\n",
+    "    * 'from_messages'\n",
+    "    * 'from_this_person_to_poi'\n",
+    "    * 'shared_receipt_with_poi'\n",
+    "\n",
+    "\n",
+    "* POI label (boolean, represented as integer)\n",
+    "    * ‘poi' \n",
+    "    \n",
+    "    \n",
+    "The question to answer and the goal of this project is to find out what features are related to the person of interest. When there are information without poi labels, the machine learning algorithm will be able to figure out whether this person is person of interest or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
