feat: Create evaluation and validation section

--- a/Machine-Learning/Final-Project.ipynb
+++ b/Machine-Learning/Final-Project.ipynb
@@ -1413,14 +1413,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluation"
+    "## Validation & Evaluation"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I tried several different algorithms and tuned each of them. It seems that K neighbor c"
+    "I applied several validation techniques within the algorithms. I split the whole dataset into training and testing dataset. I also tried to use Kfold to cross validate my algorithms. Validation is very important in machine learning process. It can help us better understand how well the algorithms, and avoid overfitting. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I tried several different algorithms and tuned each of them. It seems that K neighbors classifier is the best option here. It has 0.67 precision score and 0.33 recall score. Precision rate measures that given all the poi I predicted, what percentage of them are real poi. Recall score measures that given all the real poi, what percentage of them I predict successfully. The two scores are better measure than just the accuracy score, which simply measures the percentage of my sucessful predication rate. "
    ]
   }
  ],
